...

        let seenVC = MoviesViewController.instantiate()
        seenVC.category = .seen
        seenVC.tabBarItem = UITabBarItem(title: String.seen,
                                         image: MovieListCategory.seen.image,
                                         tag: 1)
        seenVC.tabBarItem.accessibilityIdentifier = "SeenTab"
        seenVC.storageManager = storageManager
        let seenVCWithNavi = OrangeNavigationController(rootViewController: seenVC)

        let settingsVC = SettingsViewController.instantiate()
        settingsVC.tabBarItem = UITabBarItem(title: String.settingsTitle,
                                             image: UIImage.settingsIcon,
                                             tag: 2)
        settingsVC.tabBarItem.accessibilityIdentifier = "SettingsTab"
        let settingsVCWithNavi = OrangeNavigationController(rootViewController: settingsVC)

        viewControllers = [watchlistVCWithNavi, seenVCWithNavi, settingsVCWithNavi]
    }
}

...
